app/assets/stylesheets/home.css
.opening {
  color: #303030;
  text-align: center;
  font-size: 30px;
  font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
  text-transform: uppercase;
  font-weight: bold;
}

.opening p {
  margin-top: 0px;
  color: black;
}

.current-local-button{
  position: absolute;
  top: 108px; 
  z-index: 5;
  width: 2%; 
  left: 60.5%;
  margin-right: 2%;
  color: #008BFE;
}

.fa-lg:hover{
  text-shadow: 1px 0px 20px hsl(207,100%,70%);
}

.all-trails-button {
  font-size: 18px;
  padding: 10px;
  margin-bottom: 5px;
  border-radius: 5px;
  border: 3px solid #cccccc;
  background-color: hsl(120,48%,35%);
}

.create-trail-button:hover{
  background-color: hsl(120,48%,45%);
  color: white;
  cursor: hand;
  cursor: pointer; 
}

.create-trail-button{
  font-size: 18px;
  border-radius: 5px;
  padding: 10px;
  text-align: center;
  border: 3px solid #cccccc;
  background-color: hsl(120,48%,35%);
}

.create-trail-button:hover, .all-trails-button:hover{
  background-color: hsl(120,48%,45%);
  color: white;
  cursor: hand;
  cursor: pointer; 
}

.home-description {
  position: relative;
  bottom: 14px;
  color: #303030;
  text-align: center;
  font-size: 18px;
  font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
}

#current-location {
  color: black;
  margin: auto;
  text-align: center;
}

.explore p {
  line-height: 1.5em;
  position: relative;
}

.explore h3, .engage h3 {
  text-align: center;
  margin: 0px 0px 17px 0px;
  color: #161616;
  font-size: 1.5em;
}

.engage p {
  line-height: 1.5em;
  position: relative;
}

.engage h3 {
  text-align: center;
  color: #161616;
  font-size: 1.5em;
}

#heart, #boots {
  display: block;
  margin: auto;
}

.home {
  position: absolute;
  top: 70px;
  right: 0%;
  bottom: 7%;
  padding: 2%;
  margin: 0px;
  opacity: .85;
  height: 86%;
  width: 350px;
  z-index: 5;
  background-color: white;
}

/*actual map*/
#map-canvas {
  z-index: 3;
  height: 88%;
  width: 100%;
  margin: 0 0 0 0;
  display: block;
}

.controls {
  margin-top: 16px;
  border: 1px solid transparent;
  border-radius: 2px 0 0 2px;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  height: 32px;
  outline: none;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
}

#pac-input {
  background-color: #fff;
  padding: 0 11px 0 13px;
  width: 25%;
  font-size: 18px;
  font-weight: 300;
  text-overflow: ellipsis;
  left: 5px;
}

#pac-input:focus {
  border-color: #4d90fe;
  margin-left: -1px;
  padding-left: 14px;  /* Regular padding-left + 1. */
  width: 25%;
}


#type-selector {
  color: #fff;
  background-color: #4d90fe;
  padding: 5px 11px 0px 11px;
}

#type-selector label {
  font-size: 13px;
  font-weight: 300;
}

/*trail form*/
.trail-form{
  display: none;
  height: 70%;
}
.trail-form form{
  height: 100%;
}

.trail-form input{
  width: 100%;
  border: 3px solid #cccccc;
  border-radius: 3px;
  margin-bottom: 1.8em;
  padding: 5px;
}

.trail-form-length input{
  width: 55px;
}

.trail-form-description{
  height: 45%;
}

.trail-form-description textarea{
  width: 100%;
  height: 80%;
  border-radius: 3px;
  border: 3px solid #cccccc;
  padding: 5px;
  background-position: bottom right;
}

.submit-create-trail{
  background-color: #005F6B;
  padding: 10px;
  border-radius: 5px;
  color: white;
  width: 100%;
}

.submit-create-trail:hover{ 
  background-color: #196F7A;
}

.cancel-create-trail{
  background-color: #87919E;
  padding: 10px;
  margin-top: 1em;
  border-radius: 5px;
  color: white;
  width: 100%;
}
.cancel-create-trail:hover{
  background-color: #A9B5C5;
}

/*google maps info window*/
div.marker-trail-info{
  width: 300px;
  margin: 19px;
  padding: 0;
  height: 150px;
}

.first-heading{
  color: #00688B;
}

